--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "dependencies": {
     "font-awesome": "^4.7.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.4.1",
+    "rss-parser": "^3.13.0",
+    "rss-parser-browser": "^2.2.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
