--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^11.6.0",
     "firebase-admin": "^13.2.0",
     "font-awesome": "^4.7.0",
+    "framer-motion": "^12.7.2",
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
