--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@hcaptcha/react-hcaptcha": "^1.12.0",
+    "emailjs-com": "^3.2.0",
     "firebase": "^11.6.0",
     "firebase-admin": "^13.2.0",
     "font-awesome": "^4.7.0",
